--- a/app/src/main/res/layout/fragment_breaking_news.xml
+++ b/app/src/main/res/layout/fragment_breaking_news.xml
@@ -6,15 +6,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".feature.fragment.breakingNews.BreakingNewsFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvNews"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rvCategory"
+        android:layout_marginTop="8sp"
+        android:layout_marginBottom="60dp"/>
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="/Breaking news"
-        android:textSize="66dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_marginTop="12sp"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
