--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="discover">#F000F0</color>
+    <color name="search">#00FF00</color>
+    <color name="settings">#0000FF</color>
+    <color name="login">#E5E7F3</color>
+    <color name="card">#E3E4EB</color>
+    <color name="button">#E91E63</color>
 </resources>
