--- a/app/src/main/res/layout/category_row.xml
+++ b/app/src/main/res/layout/category_row.xml
@@ -6,7 +6,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
