--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="login">#E5E7F3</color>
     <color name="card">#E3E4EB</color>
     <color name="button">#E91E63</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
