--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,9 @@
     android:id="@+id/bottom_nav_bar"
     android:layout_width="match_parent"
     android:layout_height="60dp"
+    android:background="@color/card"
     app:cnb_menuResource="@menu/menu_bar"
+    app:cnb_unselectedColor="@color/black"
     app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
