--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,33 +15,59 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            app:title="Awesome App"
+            app:title="News App"
             app:titleCollapseMode="scale"
             app:contentScrim="?attr/colorPrimary"
             app:collapsedTitleTextColor="@color/white"
             app:expandedTitleTextColor="@color/transparent">
 
-            <ImageView
-                android:id="@+id/iv_News"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_search" />
+                android:layout_marginBottom="4dp">
 
-            <TextView
-                android:id="@+id/app_Id"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="Awesome App1"
-                android:textSize="40dp" />
+
+                <ImageView
+                    android:id="@+id/iv_News"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:scaleType="centerCrop"
+                    android:layout_marginBottom="4dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/newsDetailTextView"
+                    android:src="@drawable/ic_search" />
+
+                <TextView
+                    android:id="@+id/app_Id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="4dp"
+                    android:text="Awesome App1"
+                    android:textSize="14dp"
+                   />
+
+                <!-- Yeni bir TextView ekleyin ve News Detail:app_Id gibi bir metni içine yazın. -->
+                <TextView
+                    android:id="@+id/newsDetailTextView"
+                    android:layout_width="wrap_content"
+                    style="@style/title"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toTopOf="@+id/app_Id"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:text="News Detail: "
+
+                    android:background="@android:color/darker_gray"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:popupTheme="@style/Theme.AppCompat.Light"
+                android:gravity="center"
                 app:layout_collapseMode="pin" />
-
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
@@ -51,15 +78,29 @@
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
 
-        <TextView
-            android:id="@+id/newsContent"
+        <WebView
+            android:id="@+id/webView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="hello world"
-            android:padding="20dp"/>
-
-
+            android:layout_height="match_parent" />
 
     </androidx.core.widget.NestedScrollView>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:visibility="visible" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="80dp"
+        android:layout_marginEnd="20dp"
+        app:layout_anchor="@id/webView"
+        app:layout_anchorGravity="bottom|end"
+        android:visibility="invisible"
+        android:src="@drawable/ic_save"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
