SavedNewsFragment some bugs resolved.

--- a/app/src/main/res/layout/fragment_saved_news.xml
+++ b/app/src/main/res/layout/fragment_saved_news.xml
@@ -8,12 +8,14 @@
 
 
     <ImageView
+        android:id="@+id/empty_png"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/empty" />
 
 
     <TextView
+        android:id="@+id/empty_title"
         style="@style/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,5 +24,25 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvNews"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8sp"
+        android:layout_marginBottom="60dp"/>
+
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
