--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -9,7 +9,8 @@
 <ImageView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:src="@drawable/newsapp"/>
+    android:scaleType="fitXY"
+    android:src="@drawable/f3"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/logoCw"
@@ -23,7 +24,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/appv"/>
+            android:scaleType="fitXY"
+            android:src="@drawable/xx"/>
     </androidx.cardview.widget.CardView>
 
     <Button
