--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="button">#E91E63</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="logButton">#383e42</color>
+    <color name="splash">#e2d1c3</color>
 </resources>
