--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -66,6 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:passwordToggleEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tilName">
 
@@ -78,7 +79,8 @@
             android:background="@drawable/edittext_background"
             android:ems="10"
             android:hint="Type Password"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
+            app:endIconMode="password_toggle"
             android:textColor="@color/black" />
 
 
